--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html data-bs-theme="auto" lang="pt-br">
 
 <head>
     <meta charset="utf-8">
@@ -10,6 +10,95 @@
     <meta name="description" content="Tecnologia, laboratórios e inovação para informação na web">
     <meta property="og:type" content="website">
     <meta name="twitter:title" content="Elfotec Tecnologia da Informação">
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "WebSite",
+            "name": "Elfotec Tecnologia",
+            "url": "https://www.elfotec.com.br"
+        }
+    </script>
+    <script>
+        (function() {
+
+            // JavaScript snippet handling Dark/Light mode switching
+
+            const getStoredTheme = () => localStorage.getItem('theme');
+            const setStoredTheme = theme => localStorage.setItem('theme', theme);
+            const forcedTheme = document.documentElement.getAttribute('data-bss-forced-theme');
+
+            const getPreferredTheme = () => {
+
+                if (forcedTheme) return forcedTheme;
+
+                const storedTheme = getStoredTheme();
+                if (storedTheme) {
+                    return storedTheme;
+                }
+
+                const pageTheme = document.documentElement.getAttribute('data-bs-theme');
+
+                if (pageTheme) {
+                    return pageTheme;
+                }
+
+                return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+            }
+
+            const setTheme = theme => {
+                if (theme === 'auto' && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                    document.documentElement.setAttribute('data-bs-theme', 'dark');
+                } else {
+                    document.documentElement.setAttribute('data-bs-theme', theme);
+                }
+            }
+
+            setTheme(getPreferredTheme());
+
+            const showActiveTheme = (theme, focus = false) => {
+                const themeSwitchers = [].slice.call(document.querySelectorAll('.theme-switcher'));
+
+                if (!themeSwitchers.length) return;
+
+                document.querySelectorAll('[data-bs-theme-value]').forEach(element => {
+                    element.classList.remove('active');
+                    element.setAttribute('aria-pressed', 'false');
+                });
+
+                for (const themeSwitcher of themeSwitchers) {
+
+                    const btnToActivate = themeSwitcher.querySelector('[data-bs-theme-value="' + theme + '"]');
+
+                    if (btnToActivate) {
+                        btnToActivate.classList.add('active');
+                        btnToActivate.setAttribute('aria-pressed', 'true');
+                    }
+                }
+            }
+
+            window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
+                const storedTheme = getStoredTheme();
+                if (storedTheme !== 'light' && storedTheme !== 'dark') {
+                    setTheme(getPreferredTheme());
+                }
+            });
+
+            window.addEventListener('DOMContentLoaded', () => {
+                showActiveTheme(getPreferredTheme());
+
+                document.querySelectorAll('[data-bs-theme-value]')
+                    .forEach(toggle => {
+                        toggle.addEventListener('click', (e) => {
+                            e.preventDefault();
+                            const theme = toggle.getAttribute('data-bs-theme-value');
+                            setStoredTheme(theme);
+                            setTheme(theme);
+                            showActiveTheme(theme);
+                        })
+                    })
+            });
+        })();
+    </script>
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/elfocat3-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/elfocat3-32x32.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -28,7 +117,7 @@
 </head>
 
 <body style="/*background: url(&quot;design.jpg&quot;);*/background-position: 0 -60px;">
-    <nav class="navbar navbar-dark navbar-expand-md fixed-top navbar-shrink py-3" id="mainNav">
+    <nav class="navbar navbar-expand-md fixed-top navbar-shrink py-3 navbar-dark" id="mainNav">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"><img src="assets/img/brands/elfocat.png" width="32" height="39"></span><span>Elfotec Tecnologia</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
@@ -211,7 +300,7 @@
                         </div>
                         <div class="d-flex align-items-center p-3">
                             <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-envelope">
-                                    <path fill-rule="evenodd" d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"></path>
+                                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"></path>
                                 </svg></div>
                             <div class="px-2">
                                 <h6 class="mb-0">Email</h6>
@@ -232,10 +321,10 @@
                 <div class="col-md-6 col-lg-5 col-xl-4">
                     <div>
                         <form class="p-3 p-xl-4" data-bss-recipient="46ef85fe512b421b335c4dcc0c540439" data-bss-subject="Elfotec - Fale Conosco" data-bss-loading-message="Enviando..." data-bss-success-title="Sucesso" data-bss-success-message="Sua mensagem foi enviada" data-bss-error-message="Algo aconteceu de errado..." data-bss-close="Fechar" data-bss-empty-form-message="Por favor, preencha todos os campos">
-                            <div class="mb-3"><input class="form-control" type="text" id="name-1" name="name" placeholder="Nome"></div>
-                            <div class="mb-3"><input class="form-control" type="tel" name="phone" placeholder="Telefone/Whatsapp"></div>
-                            <div class="mb-3"><input class="form-control" type="email" id="email-1" name="email" placeholder="Email"></div>
-                            <div class="mb-3"><textarea class="form-control" id="message-2" name="message" rows="6" placeholder="Mensagem"></textarea></div>
+                            <div class="mb-3"><label class="form-label">Nome</label><input class="form-control" type="text" id="name-1" name="name" placeholder="Nome"></div>
+                            <div class="mb-3"><label class="form-label">Telefone</label><input class="form-control" type="tel" name="phone" placeholder="Telefone/Whatsapp"></div>
+                            <div class="mb-3"><label class="form-label">Email</label><input class="form-control" type="email" id="email-1" name="email" placeholder="Email"></div>
+                            <div class="mb-3"><label class="form-label">Mensagem</label><textarea class="form-control" id="message-2" name="message" rows="3" placeholder="Mensagem"></textarea></div>
                             <div class="mb-3"><small>Ao enviar a mensagem você confirma que leu e aceitou os <a href="termos-uso.html">Termos de Uso</a> e a <a href="termos-privacidade.html">Política de Segurança e Privacidade</a>.</small></div>
                             <div><button class="btn btn-primary d-block w-100" type="submit">Enviar</button></div>
                         </form>
