--- a/jobs.html
+++ b/jobs.html
@@ -75,7 +75,7 @@
                                     <path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z"></path>
                                 </svg></div>
                             <div class="px-2">
-                                <h6 class="fw-bold mb-0"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe5SaDz0-CY51iCi-RbtIDJdVwtrtQpmTAbkyKJKhfLhyY5mQ/viewform" target="_blank">Envie seu currículo agora</a></h6>
+                                <h6 class="fw-bold mb-0"><a href="https://forms.gle/nszzqo1x8183Nuc68" target="_blank">Envie seu currículo agora</a></h6>
                             </div>
                         </div>
                     </div>
