--- a/jobs.html
+++ b/jobs.html
@@ -62,7 +62,7 @@
                 <div class="card-body">
                     <h4 class="card-title" style="text-align: center;">Criamos coisas incríveis com você!</h4>
                     <h6 class="text-muted card-subtitle mb-2"></h6>
-                    <p class="card-text" style="text-align: center;">Somos uma empresa jovem sediada em Brasília que nasceu para realizar sonhos por meio da tecnologia.&nbsp;<br><br>Se você gosta de desafios e de aprender, seja bem-vindo! Além de profissionais experientes, contratamos estudantes interessados em estágio.</p>
+                    <p class="card-text" style="text-align: center;">Somos uma empresa sediada em Brasília que nasceu para realizar sonhos por meio da tecnologia.&nbsp;<br><br>Se você gosta de desafios e de aprender, seja bem-vindo! Além de profissionais experientes, contratamos estudantes interessados em estágio.</p>
                     <p class="card-text"></p>
                 </div>
             </div>
