typo na pagina job

--- a/jobs.html
+++ b/jobs.html
@@ -109,7 +109,7 @@
                         </svg></div>
                     <div class="px-3">
                         <h4>Ambiente em toda parte</h4>
-                        <p>É preciso cuidar do mundo, a começar pelo mundo a nossa volta. Com atenção aos detalhes buscamos fazer mais com menos para que mundo seja mais simples</p>
+                        <p>É preciso cuidar do mundo, a começar pelo mundo a nossa volta. Com atenção aos detalhes buscamos fazer mais com menos para que o mundo seja mais simples</p>
                     </div>
                 </div>
             </div>
